WS_INTEGRATION/DX Sandbox/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Marketed_Invention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Invention object</description>
        <inlineHelpText>This is required for Marketing Invention campaigns, but is optional for other campaigns.</inlineHelpText>
        <label>Marketed Invention</label>
        <referenceTo>OLDInvention__c</referenceTo>
        <relationshipLabel>Marketed Invention Campaigns</relationshipLabel>
        <relationshipName>CampaignsToInventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Inventor__c</fullName>
        <description>The KU Contact designated as the Primary Inventor. Updated through the Marketing Invention.</description>
        <formula>Marketed_Invention__r.PrimaryInventor__r.FirstName  &amp; &apos; &apos; &amp;  Marketed_Invention__r.PrimaryInventor__r.LastName</formula>
        <inlineHelpText>The KU Contact designated as the Primary Inventor. Updated through the Marketing Invention.</inlineHelpText>
        <label>Primary Inventor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Code__c</fullName>
        <description>Track code used in Sophia/Wellspring</description>
        <formula>Marketed_Invention__r.External_ID__c</formula>
        <inlineHelpText>Track code used in Sophia/Wellspring</inlineHelpText>
        <label>Track Code</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Marketed_Invention__c</columns>
        <columns>Primary_Inventor__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Marketed_Invention__c</columns>
        <columns>Primary_Inventor__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Event_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Seminar / Conference</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Events</value>
        </filters>
        <label>Event Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Invention_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Primary_Inventor__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Marketed Invention</value>
        </filters>
        <label>Invention Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Primary_Inventor__c</columns>
        <columns>Marketed_Invention__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Non_Invention_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Campaign.Invention_Campaign</value>
        </filters>
        <label>Non-Invention Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <description>Used for specific events or meetings</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invention_Campaign</fullName>
        <active>true</active>
        <description>This campaign record type is used by the marketing and licencing teams to market a specific invention.</description>
        <label>Invention Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Campaign</fullName>
        <active>true</active>
        <description>This campaign record type is not meant to be used as a standard campaign. This campaign type should have no specific members, but rather be a collection of all the campaign children.</description>
        <label>Parent Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Campaign</fullName>
        <active>true</active>
        <description>This is a generic campaign record type designed to be used for many different purposes.</description>
        <label>Standard Campaign</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>